--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,16 +6,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    animation-name: slide;
-    animation-duration: 1.3s;
+    transition: ease;
   }
 }
 
-@keyframes slide {
-  from{
-    top: 200px;
-  }
-  to {
-    top: 0;
-  }
-}
